--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
           <div class="toggle-descrip">
             <h1>Connect</h1>
             <!--<p class="discrip title">Connect Rules</p>-->
-            <p class="descrip">Each player receives five cards.</p>
-            <p class="descrip">Any player can "play a card" by ceiling a story emphasizing one of the adjeclives on !he cards.</p>
-            <p class="descrip">If anolhcr player recognizes the adjcclive and finds it on one of their cards, they say "That sounds (<em>fill-in-adjective</em>)!" If the first player confirms, the second player continues the srory, incorporaling changes needed to emphasize another adjective on the matching card.</p>
-            <p class="descrip">When no more connections can be made, the player with the least connections can score 5 points by recreating all of the connections from memory.</p>
-            <p class="descrip">Each connection scores 3 points.</p>
+            <p>Each player receives five cards.</p>
+            <p>Any player can "play a card" by ceiling a story emphasizing one of the adjeclives on !he cards.</p>
+            <p>If anolhcr player recognizes the adjcclive and finds it on one of their cards, they say "That sounds (<em>fill-in-adjective</em>)!" If the first player confirms, the second player continues the srory, incorporaling changes needed to emphasize another adjective on the matching card.</p>
+            <p>When no more connections can be made, the player with the least connections can score 5 points by recreating all of the connections from memory.</p>
+            <p>Each connection scores 3 points.</p>
           </div>
         </div>
         <div class="col toggle-container" id="survey">
@@ -43,9 +43,9 @@
             <h1>Secret Survey</h1>
           </div>
           <div class="toggle-descrip">
-            <p class="descrip"><strong>VOTE!</strong> Pick 5 Secret Survey questions. randomly or not, and place the cards face-up around the room or table. Players secretly vote on each question by placing a voting card in a face-down pile, with the matching red or black answers at the end of the cards pointing at the question card.</p>
-            <p class="descrip"><strong>PLAY!</strong> The first player matches off against the player to the left. The second player guesses how many people answered the question Yes/Black. The first then gets to pick higher or lower. The cards arc flippcd (along the long-side of the card so you don't reverse the choices) to see who won the round.</p>
-            <p class="descrip"><strong>SCORE!</strong> The winner scores 5 points and gets to play against the next player to the left. (New player guesses first.)</p>
+            <p><strong>VOTE!</strong> Pick 5 Secret Survey questions. randomly or not, and place the cards face-up around the room or table. Players secretly vote on each question by placing a voting card in a face-down pile, with the matching red or black answers at the end of the cards pointing at the question card.</p>
+            <p><strong>PLAY!</strong> The first player matches off against the player to the left. The second player guesses how many people answered the question Yes/Black. The first then gets to pick higher or lower. The cards arc flippcd (along the long-side of the card so you don't reverse the choices) to see who won the round.</p>
+            <p><strong>SCORE!</strong> The winner scores 5 points and gets to play against the next player to the left. (New player guesses first.)</p>
             <h1>Secret Survey</h1>
           </div>
         </div>
@@ -57,9 +57,9 @@
             <h1>Like More?</h1>
           </div>
           <div class="toggle-descrip">
-            <p class="descrip">Give each player one card of each suit. Make the cross of suits on the back of the rule cards and place a card so that the Like More clue sticks out.</p>
-            <p class="descrip">The first player orders the clues from favorite to least favorite, by placing the cards with the same suits in the same order. with favorite on bonom. Each player guesses how the first player will rank the four clues. When each player is done, they set the cards in a face-down pile.</p>
-            <p class="descrip">Each player reveals their cards at the same time, and each player scores a point for every match they have with the first player. Bonus point for a perfect guess.</p>
+            <p>Give each player one card of each suit. Make the cross of suits on the back of the rule cards and place a card so that the Like More clue sticks out.</p>
+            <p>The first player orders the clues from favorite to least favorite, by placing the cards with the same suits in the same order. with favorite on bonom. Each player guesses how the first player will rank the four clues. When each player is done, they set the cards in a face-down pile.</p>
+            <p>Each player reveals their cards at the same time, and each player scores a point for every match they have with the first player. Bonus point for a perfect guess.</p>
             <h1>Like More?</h1>
           </div>
         </div>
@@ -70,10 +70,10 @@
           <div class="toggle-descrip">
             <h1>House Rules</h1>
             <p class="descrip title">House Rules Suggestions</p>
-            <p class="descrip">In <strong>LIKE MORE</strong>, allow players to take one of the used cards and mix a card of the same suit into the draw pile. This allows players to pick their favorite <strong>LIKE MORE</strong> topics.</p>
-            <p class="descrip">If you win in <strong>SECRET SURVEY</strong>, you get to make any other player answer to a specific <strong>SECRET SURVEY</strong> question.</p>
-            <p class="descrip">With a group larger than six people, have everybody vote in the <strong>SECRET SURVEY</strong>, then split into teams and pick a representative to face-off in a one-on-one battle. Screaming suggestions of HIGHER or LOWER are encouraged.</p>
-            <p class="descrip">Wrong guesses lose a point in <strong>CONNECT</strong>.</p>
+            <p>In <strong>LIKE MORE</strong>, allow players to take one of the used cards and mix a card of the same suit into the draw pile. This allows players to pick their favorite <strong>LIKE MORE</strong> topics.</p>
+            <p>If you win in <strong>SECRET SURVEY</strong>, you get to make any other player answer to a specific <strong>SECRET SURVEY</strong> question.</p>
+            <p>With a group larger than six people, have everybody vote in the <strong>SECRET SURVEY</strong>, then split into teams and pick a representative to face-off in a one-on-one battle. Screaming suggestions of HIGHER or LOWER are encouraged.</p>
+            <p>Wrong guesses lose a point in <strong>CONNECT</strong>.</p>
           </div>
         </div>
       </div>
